- further design fixes (older posts link, comments toggle, comments hidden by default) - and respective changes in css file

--- a/SjuLoves_v3/public_html/css/sjuloves.css
+++ b/SjuLoves_v3/public_html/css/sjuloves.css
@@ -32,13 +32,20 @@ body {
 .blog-pager {
     font-weight: 200;
     padding-bottom: 3.5rem;
-    padding-right: 1em;
+    /*padding-right: 1em;*/
     background: rgb(245,245,245);
-    font-size: 1.5rem;
+    text-transform: uppercase;
+    letter-spacing: .2rem;
+    text-decoration: none;
+    line-height: 6.5rem;
+    color: #222;
+    font-weight: 200;
+    font-size: 1.3rem;
 }
 
 .blog-pager a {
     color: #222;
+    text-decoration: none;
 }
 
 a:hover {
